--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "kirki-framework/kirki",
+    "name": "nectar-blocks/kirki",
     "type": "library",
-    "version": "5.0.0",
+    "version": "6.0.0",
     "keywords": [
         "WordPress",
         "Customizer"
@@ -13,6 +13,10 @@
         {
             "name": "Kirki Framework",
             "email": "support@themeum.com"
+        },
+        {
+            "name": "Nectarblocks",
+            "email": "support@nectarblocks.com"
         }
     ],
     "config": {
@@ -53,7 +57,7 @@
                 "kirki-packages/module-section-icons/src",
                 "kirki-packages/module-selective-refresh/src",
                 "kirki-packages/module-tooltips/src",
-                "kirki-packages/module-webfonts/src" 
+                "kirki-packages/module-webfonts/src"
             ],
             "Kirki\\Util\\": [
                 "kirki-packages/util/src"
